[gd_scene load_steps=9 format=3 uid="uid://cauxckh1j8rsx"]

[ext_resource type="Script" path="res://scripts/powerup.gd" id="1_javxo"]
[ext_resource type="Texture2D" uid="uid://c0gwwcm3o3x3c" path="res://assets/sprites/powerup1.png" id="2_oun7w"]
[ext_resource type="AudioStream" uid="uid://f2i8gi6r6vyo" path="res://assets/sounds/coin.wav" id="3_4gkak"]

[sub_resource type="Animation" id="Animation_yfs4e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rrlet"]
resource_name = "active"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="Animation" id="Animation_gpyks"]
resource_name = "expires"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nafhh"]
_data = {
"RESET": SubResource("Animation_yfs4e"),
"active": SubResource("Animation_rrlet"),
"expires": SubResource("Animation_gpyks")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_v3iq6"]
radius = 15.1327

[node name="Powerup" type="Area2D" groups=["powerups"]]
collision_mask = 2
script = ExtResource("1_javxo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oun7w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_nafhh")
}
autoplay = "active"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v3iq6")

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4gkak")

[node name="ExpiresTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="RemoveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ExpiresTimer" to="." method="_on_expires_timer_timeout"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_remove_timer_timeout"]
